--- a/src/App.css
+++ b/src/App.css
@@ -88,3 +88,10 @@ a {
   font-size: 14px;
   font-style: italic;
 }
+
+.banner {
+  background-color: lightgray;
+  width: 100%;
+  height: 80px;
+  color: black;
+}
